mutants.out.old/log/crates__diffguard-diff__src__unified.rs_line_423_col_5_001.log

*** crates/diffguard-diff/src/unified.rs:423:5: replace tokenize_git_paths -> Vec<GitPathToken> with vec![Default::default()]

*** mutation diff:
--- crates/diffguard-diff/src/unified.rs
+++ replace tokenize_git_paths -> Vec<GitPathToken> with vec![Default::default()]
@@ -415,72 +415,17 @@
 
 #[derive(Debug, Clone)]
 struct GitPathToken {
     value: String,
     quoted: bool,
 }
 
 fn tokenize_git_paths(input: &str, limit: usize) -> Vec<GitPathToken> {
-    let mut tokens = Vec::new();
-    let mut buf = String::new();
-    let mut quoted = false;
-    let mut in_quote = false;
-    let mut chars = input.chars().peekable();
-
-    while let Some(ch) = chars.next() {
-        if in_quote {
-            if ch == '\\' {
-                if let Some(next) = chars.next() {
-                    buf.push('\\');
-                    buf.push(next);
-                } else {
-                    buf.push('\\');
-                }
-                continue;
-            }
-
-            if ch == '"' {
-                in_quote = false;
-                continue;
-            }
-
-            buf.push(ch);
-            continue;
-        }
-
-        if ch.is_whitespace() {
-            if !buf.is_empty() {
-                tokens.push(GitPathToken {
-                    value: buf.clone(),
-                    quoted,
-                });
-                buf.clear();
-                quoted = false;
-                if tokens.len() >= limit {
-                    return tokens;
-                }
-            }
-            continue;
-        }
-
-        if ch == '"' {
-            in_quote = true;
-            quoted = true;
-            continue;
-        }
-
-        buf.push(ch);
-    }
-
-    if !buf.is_empty() && tokens.len() < limit {
-        tokens.push(GitPathToken { value: buf, quoted });
-    }
-
-    tokens
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_single_git_path(input: &str) -> Option<String> {
     let tokens = tokenize_git_paths(input, 1);
     tokens.first().map(unquote_git_token)
 }
 
 fn parse_rename_path(input: &str) -> Option<String> {


*** /home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=diffguard-diff@0.2.0
       Fresh unicode-ident v1.0.24
       Fresh proc-macro2 v1.0.106
       Fresh cfg-if v1.0.4
       Fresh linux-raw-sys v0.12.1
       Fresh bitflags v2.11.0
       Fresh once_cell v1.21.4
       Fresh memchr v2.8.0
       Fresh quote v1.0.45
       Fresh itoa v1.0.18
       Fresh autocfg v1.5.0
       Fresh fastrand v2.3.0
       Fresh dyn-clone v1.0.20
       Fresh syn v2.0.117
       Fresh libc v0.2.184
       Fresh serde_core v1.0.228
       Fresh rustix v1.1.4
       Fresh zmij v1.0.21
       Fresh zerocopy v0.8.48
       Fresh quick-error v1.2.3
       Fresh fnv v1.0.7
       Fresh bit-vec v0.8.0
       Fresh unarray v0.1.4
       Fresh similar v2.7.0
       Fresh regex-syntax v0.8.10
       Fresh serde_derive v1.0.228
       Fresh getrandom v0.3.4
       Fresh serde_derive_internals v0.29.1
       Fresh ref-cast-impl v1.0.25
       Fresh getrandom v0.4.2
       Fresh serde_json v1.0.149
       Fresh thiserror-impl v2.0.18
       Fresh ppv-lite86 v0.2.21
       Fresh wait-timeout v0.2.1
       Fresh console v0.16.3
       Fresh bit-set v0.8.0
       Fresh anyhow v1.0.102
       Fresh rand_core v0.9.5
       Fresh serde v1.0.228
       Fresh tempfile v3.27.0
       Fresh ref-cast v1.0.25
       Fresh schemars_derive v1.2.1
       Fresh thiserror v2.0.18
       Fresh num-traits v0.2.19
       Fresh schemars v1.2.1
       Fresh rusty-fork v0.3.1
       Fresh rand_xorshift v0.4.0
       Fresh rand_chacha v0.9.0
       Fresh rand v0.9.2
       Fresh insta v1.47.2
       Fresh diffguard-types v0.2.0 (/tmp/cargo-mutants-diffguard-GBqBRA.tmp/crates/diffguard-types)
       Fresh proptest v1.11.0
       Dirty diffguard-diff v0.2.0 (/tmp/cargo-mutants-diffguard-GBqBRA.tmp/crates/diffguard-diff): the file `crates/diffguard-diff/src/unified.rs` has changed (1775668336.100625325s, 5s after last build at 1775668331.085437878s)
   Compiling diffguard-diff v0.2.0 (/tmp/cargo-mutants-diffguard-GBqBRA.tmp/crates/diffguard-diff)
     Running `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=52f023dbcd3d5200 -C extra-filename=-b586ecc3194d33f5 --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rlib --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rlib --extern insta=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libinsta-b5319b7a6520a570.rlib --extern proptest=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libproptest-369c3590d9fa4491.rlib --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rlib`
     Running `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=817c377025fcbe9e -C extra-filename=-c73328382a27267f --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rmeta --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rmeta --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rmeta`
error[E0277]: the trait bound `GitPathToken: Default` is not satisfied
   --> crates/diffguard-diff/src/unified.rs:423:10
    |
423 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `GitPathToken`
    |
help: consider annotating `GitPathToken` with `#[derive(Default)]`
    |
417 + #[derive(Default)]
418 | struct GitPathToken {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `diffguard-diff` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=817c377025fcbe9e -C extra-filename=-c73328382a27267f --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rmeta --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rmeta --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `diffguard-diff` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/hermes/.rustup/toolchains/1.92.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name diffguard_diff --edition=2024 crates/diffguard-diff/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=52f023dbcd3d5200 -C extra-filename=-b586ecc3194d33f5 --out-dir /tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps --extern anyhow=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libanyhow-dcc2beb2eec72907.rlib --extern diffguard_types=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libdiffguard_types-1b033e1bf3017415.rlib --extern insta=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libinsta-b5319b7a6520a570.rlib --extern proptest=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libproptest-369c3590d9fa4491.rlib --extern thiserror=/tmp/cargo-mutants-diffguard-GBqBRA.tmp/target/debug/deps/libthiserror-15f09e27eff85921.rlib` (exit status: 1)

*** result: Failure(101)
